# SC-Tool

./: .gitignore  Cargo.toml  README.md  aliyun.rs  baidu.rs  baidu_ocr.rs  build.rs  chatfmt.rs  config.rs  deepseek.rs  main.rs  ocr.rs  region.rs  screenshot.rs  settings.rs  simpconv.rs  table.rs  tencent.rs  toast.rs  translate.rs
