[package]
name = "sc-tool"
version = "1.2.0"
edition = "2021"

[[bin]]
name = "SC-Tool"
path = "main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Input_Ime",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
clipboard-win = "5"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[build-dependencies]
winres = "0.1"
